// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gutter lg 1`] = `
<Split
  className=""
  component="div"
  gutter="lg"
>
  <div
    className="pf-l-split pf-m-gutter"
  >
    <SplitItem
      className=""
      isFilled={false}
    >
      <div
        className="pf-l-split__item"
      >
        Basic Content
      </div>
    </SplitItem>
  </div>
</Split>
`;

exports[`Gutter md 1`] = `
<Split
  className=""
  component="div"
  gutter="md"
>
  <div
    className="pf-l-split pf-m-gutter"
  >
    <SplitItem
      className=""
      isFilled={false}
    >
      <div
        className="pf-l-split__item"
      >
        Basic Content
      </div>
    </SplitItem>
  </div>
</Split>
`;

exports[`Gutter sm 1`] = `
<Split
  className=""
  component="div"
  gutter="sm"
>
  <div
    className="pf-l-split pf-m-gutter"
  >
    <SplitItem
      className=""
      isFilled={false}
    >
      <div
        className="pf-l-split__item"
      >
        Basic Content
      </div>
    </SplitItem>
  </div>
</Split>
`;

exports[`isMain 1`] = `
<Split
  className=""
  component="div"
  gutter={null}
>
  <div
    className="pf-l-split"
  >
    <SplitItem
      className=""
      isFilled={false}
      isMain={true}
    >
      <div
        className="pf-l-split__item"
        isMain={true}
      >
        Main content
      </div>
    </SplitItem>
  </div>
</Split>
`;

exports[`isMain defaults to false 1`] = `
<Split
  className=""
  component="div"
  gutter={null}
>
  <div
    className="pf-l-split"
  >
    <SplitItem
      className=""
      isFilled={false}
    >
      <div
        className="pf-l-split__item"
      >
        Basic content
      </div>
    </SplitItem>
  </div>
</Split>
`;
